--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -244,9 +244,13 @@
                     <input type="submit" value="О проекте">
                     }</a></li>
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
-
                     <input type="hidden" name="numberSql" value="0">
                     <input type="submit" value="Корзина">
+                    }</a></li>
+
+                <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                    <input type="hidden" name="numberSql" value="1">
+                    <input type="submit" value="Избранное">
                     }</a></li>
                 @if(isAdmin) {
                     @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
