--- a/app/views/basketPage.scala.html
+++ b/app/views/basketPage.scala.html
@@ -138,8 +138,12 @@
             <li><a>@helper.form(action = routes.BasketController.basketPage) {
                 <input type="hidden" name="numberSql" value="0">
                 <input type="submit" value="Корзина">
-                }</a>
-            </li>
+                }</a></li>
+
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="1">
+                <input type="submit" value="Избранное">
+                }</a></li>
             @if(isAdmin) {
                 @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
                 <li><a href="#win3" class="button button-green">Добавить товар</a></li>
