--- a/app/views/salesPage.scala.html
+++ b/app/views/salesPage.scala.html
@@ -164,6 +164,11 @@
                     <input type="hidden" name="numberSql" value="0">
                     <input type="submit" value="Корзина">
                     }</a></li>
+
+                <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                    <input type="hidden" name="numberSql" value="1">
+                    <input type="submit" value="Избранное">
+                    }</a></li>
                 @if(isAdmin) {
                     <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
                     <li><a href="#win3" class="button button-green" >Добавить акцию</a></li>
