--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -44,10 +44,15 @@
             <input type="submit" value="О проекте">
             }</a>
         </li>
-        <li><a>@helper.form(action = routes.BasketController.basketPage) {
-            <input type="hidden" name="numberSql" value="0">
-            <input type="submit" value="Корзина">
-            }</a>
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="0">
+                <input type="submit" value="Корзина">
+                }</a></li>
+
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="1">
+                <input type="submit" value="Избранное">
+                }</a></li>
         </li>
         <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
         <li><a href="@routes.UsersController.renderAddUserForm(true, 0)">Добавить пользователя </a></li>
