--- a/app/views/usersRatingPage.scala.html
+++ b/app/views/usersRatingPage.scala.html
@@ -67,6 +67,15 @@
 
                     <input type="submit" value="О проекте">
                 }
+                <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                    <input type="hidden" name="numberSql" value="0">
+                    <input type="submit" value="Корзина">
+                    }</a></li>
+
+                <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                    <input type="hidden" name="numberSql" value="1">
+                    <input type="submit" value="Избранное">
+                    }</a></li>
                 @if(isAdmin) {
                     <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
                 }
