--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -433,7 +433,7 @@
                                         <p>
                                             @if(!(login.isEmpty)) {
                                                 @if(item.isAddingToBasket(item.getIdProduct,login)==login) {
-                                                    @helper.form(action = routes.BasketController.addIn(login, isAdmin, item.getIdProduct)) {
+                                                    @helper.form(action = routes.BasketController.addIn(item.getIdProduct)) {
                                                         <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
                                                             height: 50px">
                                                             <span class="glyphicon glyphicon-shopping-cart" ></span>
@@ -444,7 +444,7 @@
                                                     Товар уже добавлен в корзину.
                                                 }
                                                 @if(item.isAddingToFavorite(item.getIdProduct,login)==login) {
-                                                    @helper.form(action = routes.BasketController.addInFavorite(login, item.getIdProduct)) {
+                                                    @helper.form(action = routes.BasketController.addInFavorite(item.getIdProduct)) {
                                                         <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
                                                             height: 50px">
                                                             <span class="glyphicon glyphicon-heart" ></span>
