--- a/app/views/salesPage.scala.html
+++ b/app/views/salesPage.scala.html
@@ -156,7 +156,7 @@
                     <input type="submit" value="Каталог">
                     }</a>
                 </li>
-                <li><a>@helper.form(action = routes.mainPageController.projectPage2) {
+                <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
 
                     <input type="submit" value="О проекте">
                     }</a></li>
