--- a/app/views/basketPage.scala.html
+++ b/app/views/basketPage.scala.html
@@ -130,7 +130,7 @@
                 <input type="submit" value="Каталог">
                 }</a>
             </li>
-            <li><a> @helper.form(action = routes.mainPageController.projectPage2) {
+            <li><a> @helper.form(action = routes.AuxiliaryController.projectPage2) {
                 <input type="submit" value="О проекте ">
                 }
             </a>
