--- a/app/views/createUser.scala.html
+++ b/app/views/createUser.scala.html
@@ -1,4 +1,4 @@
-@(form: play.data.Form[User],admin:Boolean, error:Integer,login:String)
+@(form: play.data.Form[User],admin:Boolean, error:Byte,login:String)
 <html>
     <head>
         <title>
