зинабоба идет гулять

--- a/app/views/contactPage.scala.html
+++ b/app/views/contactPage.scala.html
@@ -57,7 +57,7 @@
                     <h1 class="modal-title">Регистрация </h1>
                 </div>
 
-                @helper.form(action = routes.UsersController.addingUser(isAdmin), 'id -> "slick-login") {
+                @helper.form(action = routes.UsersController.addingUser(), 'id -> "slick-login") {
 
                     @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
 
@@ -149,7 +149,7 @@
                     <input type="submit" value="Избранное">
                     }</a></li>
                 @if(isAdmin) {
-                    <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
+                    <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
                 }
 
 
