--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -1,7 +1,7 @@
 @(nameColomn: Seq[String], win: Seq[wine], login: String, isAdmin: Boolean,
         bookForm: play.data.Form[LoginForm], registrationForm: play.data.Form[User],
-        error: Integer, wineForm: play.data.Form[wine], form: play.data.Form[UpdateWine],
-        wine: wine, searchform: play.data.Form[search])
+        error: Byte, wineForm: play.data.Form[wine], form: play.data.Form[UpdateWine],
+        wine: wine, searchform: play.data.Form[Search])
 
 <html>
     <head>
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/search.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/Search.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
@@ -54,7 +54,7 @@
                     <h1 class="modal-title">Регистрация </h1>
                 </div>
 
-                @helper.form(action = routes.UsersController.addingUser(isAdmin), 'id -> "slick-login") {
+                @helper.form(action = routes.UsersController.addingUser(), 'id -> "slick-login") {
 
                     @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
 
@@ -120,7 +120,7 @@
                 <br>
 
 
-                @helper.form(action = routes.WineController.addingWine(login), 'id -> "slick-login") {
+                @helper.form(action = routes.WineController.addingWine(), 'id -> "slick-login") {
                     @helper.inputText(wineForm("name"), '_showConstraints -> false, 'placeholder -> "Название вина")
                     @helper.inputText(wineForm("colour"), '_showConstraints -> false, 'placeholder -> "Цвет")
                     @helper.inputText(wineForm("country"), '_showConstraints -> false, 'placeholder -> "Страна")
@@ -138,7 +138,7 @@
                     </div>
 
 
-                    <a href="@routes.UsersController.renderAddUserForm(false, 0)" class="slick-login2">Регистрация</a>
+                    <a href="@routes.UsersController.renderAddUserForm(0)" class="slick-login2">Регистрация</a>
 
                 }
 
@@ -159,7 +159,7 @@
                 </div>
 
                 @*<br>*@
-                @helper.form(action = routes.WineController.updateWineInfo(wine.getIdProduct, login), 'id -> "slick-login") {
+                @helper.form(action = routes.WineController.updateWineInfo(wine.getIdProduct), 'id -> "slick-login") {
 
                     <table>
                         <tr>
@@ -255,7 +255,7 @@
                 @if(isAdmin) {
                     @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
                     <li><a href="#win3" class="button button-green">Добавить товар</a></li>
-                    <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
+                    <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
                 }
 
 
@@ -355,9 +355,9 @@
                                         <p > @colomn(9):@item.getValue</p>
                                         <p > @colomn(10):@item.getDegree</p>
                                         @if(isAdmin) {
-                                            <a href="@routes.WineController.renderUpdateWineInfo(item.getIdProduct, login)">
+                                            <a href="@routes.WineController.renderUpdateWineInfo(item.getIdProduct)">
                                             Изменить</a>
-                                            <a href="@routes.WineController.deleteWine(item.getIdProduct, login)" >
+                                            <a href="@routes.WineController.deleteWine(item.getIdProduct)" >
                                             Удалить </a>
                                             @helper.form(action = routes.WineController.upload(item.getIdProduct), 'enctype -> "multipart/form-data") {
 
@@ -477,8 +477,8 @@
                     <table class="wine2">
                 <tr>Фильтр</tr>
                 <tr> <!--форма поиска -->
-                    <div class="search">
-                @helper.form(action = routes.WineController.searchCatalogPage(login, isAdmin)) {
+                    <div class="Search">
+                @helper.form(action = routes.WineController.searchCatalogPage()) {
                     @helper.inputText(wineForm("name"), '_showConstraints -> false, 'placeholder -> "Введите название", '_label -> "")
                     <tr>Цвет</tr>
                     <div class="group">
@@ -529,26 +529,26 @@
                          4 - по крепости по убыванию-->
 
 
-                @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 0)) {
+                @helper.form(action = routes.WineController.sortCatalogPage(0)) {
                     Cортировка по цене
                 <button type="submit" class="btn btn-default btn-sm">
                     <span class="glyphicon glyphicon-sort-by-attributes"></span>
                 </button>
                 }
-                @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 5)) {
+                @helper.form(action = routes.WineController.sortCatalogPage(5)) {
 
                     <button type="submit" class="btn btn-default btn-sm">
                         <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
                     </button>
                 }
                 <p></p>
-                @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 1)) {
+                @helper.form(action = routes.WineController.sortCatalogPage(1)) {
                     Cортировка по названию
                     <button type="submit" class="btn btn-default btn-sm">
                         <span class="glyphicon glyphicon-sort-by-attributes"></span>
                     </button>
                 }
-                @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 2)) {
+                @helper.form(action = routes.WineController.sortCatalogPage(2)) {
 
                     <button type="submit" class="btn btn-default btn-sm">
                         <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
@@ -556,13 +556,13 @@
                 }
                 <p></p>
 
-                @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 3)) {
+                @helper.form(action = routes.WineController.sortCatalogPage(3)) {
                     Сортировка по крепости
                     <button type="submit" class="btn btn-default btn-sm">
                         <span class="glyphicon glyphicon-sort-by-attributes"></span>
                     </button>
                 }
-                @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 4)) {
+                @helper.form(action = routes.WineController.sortCatalogPage(4)) {
 
                     <button type="submit" class="btn btn-default btn-sm">
                         <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
