--- a/app/views/favoritePage.scala.html
+++ b/app/views/favoritePage.scala.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/search.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/Search.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
         <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
@@ -63,7 +63,7 @@
                     <h1 class="modal-title">Регистрация </h1>
                 </div>
 
-                @helper.form(action = routes.UsersController.addingUser(isAdmin), 'id -> "slick-login") {
+                @helper.form(action = routes.UsersController.addingUser(), 'id -> "slick-login") {
 
                     @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
 
@@ -158,7 +158,7 @@
                 @if(isAdmin) {
                     @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
                     <li><a href="#win3" class="button button-green">Добавить товар</a></li>
-                    <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
+                    <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
                 }
 
             </ul>
