--- a/app/views/indexCatalogPage.scala.html
+++ b/app/views/indexCatalogPage.scala.html
@@ -1,7 +1,7 @@
 @(list:Seq[String],list2:Seq[wine],login:String,isAdmin:Boolean,
         bookForm : play.data.Form[LoginForm],
-        registrationForm : play.data.Form[User],error:Integer,wineForm:play.data.Form[wine],
-        updateForm: play.data.Form[UpdateWine],win:wine,searchform: play.data.Form[search] )
+        registrationForm : play.data.Form[User],error:Byte,wineForm:play.data.Form[wine],
+        updateForm: play.data.Form[UpdateWine],win:wine,searchform: play.data.Form[Search] )
 <html>
 
     <head>
