--- a/app/views/updateWine.scala.html
+++ b/app/views/updateWine.scala.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/search.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/Search.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
@@ -21,7 +21,7 @@
         @*<a href="@routes.WineController.catalogPage(login,true)" class = "link">На главную страницу </a>*@
         <h1 class="g1">Редактирование товара</h1>
 
-        @helper.form(action = routes.WineController.updateWineInfo(win.getIdProduct,login), 'id -> "slick-login"){
+        @helper.form(action = routes.WineController.updateWineInfo(win.getIdProduct), 'id -> "slick-login"){
 
                 <tr>
                     <td> Название:  </td> <td>@helper.inputText(form("name"),'_showConstraints ->false)</td>
