--- a/app/views/usersRatingPage.scala.html
+++ b/app/views/usersRatingPage.scala.html
@@ -11,7 +11,7 @@
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/search.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/Search.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
@@ -44,7 +44,7 @@
                         }
                         @if(!(login.isEmpty)) {
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
-                            <li><a href="@routes.RatingController.ratingUserPage(login, isAdmin)">Действия</a></li>
+                            <li><a href="@routes.RatingController.ratingUserPage()">Действия</a></li>
                         }
 
                     </ul>
@@ -77,7 +77,7 @@
                     <input type="submit" value="Избранное">
                     }</a></li>
                 @if(isAdmin) {
-                    <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
+                    <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
                 }
 
             </ul>
@@ -142,9 +142,9 @@
                             @if(isAdmin) {
                                 <th>
                                     @*<li><a href="#win4" class="button button-green">Редактировать</a></li>*@
-                                    <a href="@routes.WineController.renderUpdateWineInfo(item.getIdProduct, login)">
+                                    <a href="@routes.WineController.renderUpdateWineInfo(item.getIdProduct)">
                                         Изменить</a>
-                                    <a href="@routes.WineController.deleteWine(item.getIdProduct, login)" >
+                                    <a href="@routes.WineController.deleteWine(item.getIdProduct)" >
                                         Удалить </a></th>
                             }
                             <tr></tr>
