--- a/app/views/basketPage.scala.html
+++ b/app/views/basketPage.scala.html
@@ -1,5 +1,5 @@
 @(login: String, isAdmin: Boolean, nameColomn: Seq[String], win: Seq[wine], LoginForm: play.data.Form[LoginForm],
-        registrationForm: play.data.Form[User], error: Byte)
+        registrationForm: play.data.Form[User], error: Integer)
 <html lang="en">
     <head>
         <meta charset="UTF-8">
