--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -1,6 +1,6 @@
 @(nameColomn: Seq[String], win: Seq[wine], login: String, isAdmin: Boolean,
         bookForm: play.data.Form[LoginForm], registrationForm: play.data.Form[User],
-        error: Byte, wineForm: play.data.Form[wine], form: play.data.Form[UpdateWine],
+        error: Integer, wineForm: play.data.Form[wine], form: play.data.Form[UpdateWine],
         wine: wine, searchform: play.data.Form[Search])
 
 <html>
