--- a/app/views/indexProjectPage.scala.html
+++ b/app/views/indexProjectPage.scala.html
@@ -1,4 +1,4 @@
-@(login : String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Byte)
+@(login : String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Integer)
 <html>
 
     <head>
