--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -1,4 +1,5 @@
-@(login: String, isAdmin: Boolean, bookForm: play.data.Form[LoginForm], registrationForm: play.data.Form[User], error: Byte)
+@(login: String, isAdmin: Boolean, bookForm: play.data.Form[LoginForm],
+        registrationForm: play.data.Form[User], error: Integer)
 <html>
     @*0 -no error , if 1 - error*@
     <head>
