--- a/app/views/salesPage.scala.html
+++ b/app/views/salesPage.scala.html
@@ -1,4 +1,6 @@
-@(Sale:Seq[Sale],login: String, isAdmin: Boolean, bookForm: play.data.Form[LoginForm], registrationForm: play.data.Form[User], sale: Sale,error:Integer,saleForm:play.data.Form[Sale])
+@(Sale:Seq[Sale],login: String, isAdmin: Boolean, bookForm: play.data.Form[LoginForm],
+        registrationForm: play.data.Form[User], sale: Sale,error:Integer,
+        saleForm:play.data.Form[Sale])
 <html>
 
     <head>
