--- a/public/stylesheets/fontXml.css
+++ b/public/stylesheets/fontXml.css
@@ -144,33 +144,20 @@ ul.menu > li:hover > ul.submenu {
 }
 
 
-table.wine {
-    /*table-layout:fixed;*/
-    width: 100%;
-}
-/*table.wine td {*/
-    /*overflow:hidden;*/
-/*}*/
-/*table.wine1 td:nth-of-type(1) {*/
-    /*width:200px;*/
-/*}*/
-/*table.wine td:nth-of-type(2) {*/
-    /*width:200px;*/
-/*}*/
-/*table.wine1 th:nth-of-type(8) {*/
-    /*width:45px;*/
-/*}*/
-
 table.wine1 {
-
+    /*table-layout:fixed;*/
     width: 100%;
 }
-table.wine2 {
-    /*table-layout:fixed;*/
-    width: 40%;
-    margin-top: 0%;/*150*/
-    margin-left: 0%;/*-10*/
+table.wine1 td {
+    overflow:hidden;
 }
+table.wine1 td:nth-of-type(1) {
+    width:700px;
+}
+table.wine1 td:nth-of-type(2) {
+    width:250px;
+}
+
 
 
 
@@ -368,169 +355,25 @@ img {
 }
 
 
-/*#main {*/
-    /*background-color: #fff;*/
-    /*padding:20px 0;*/
-/*}*/
-/*#content {*/
-    /*overflow: hidden;*/
-/*}*/
-#content #left, #content #right {
-    /*border: 1px solid #E9E9E9;!** было закомнтированно**!*/
-    /*float: left;*/
-    margin: 0 2%;
-    width: 63%;
-}
-#content #right {
-    margin-left: 0;
-    width: 30%;
-}
-/*#content h3 {*/
-    /*background: -moz-linear-gradient(#ffffff, #F6F6F6); !* Для браузера Firefox от версии 3.6 *!*/
-    /*background: -ms-linear-gradient(#ffffff, #F6F6F6); !* Для браузера Internet Explorer версии 10 *!*/
-    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #F6F6F6));*/
-    /*!* Для браузеров Safari от версии 4 и Chrome от версии 2 *!*/
-    /*background: -webkit-linear-gradient(#ffffff, #F6F6F6); /*/
-    /*!* Для браузеров Safari от версии 5.1 и Chrome от версии 10 *!*/
-/*background: -o-linear-gradient(#ffffff, #F6F6F6); !* Для браузера Opera версии 11.10 *!*/
-    /*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#F6F6F6');*/
-    /*!* Для браузеров Internet Explorer версий 6 и 7 *!*/
-    /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#F6F6F6')";*/
-    /*!* Для браузера Internet Explorer версии 8 *!*/
-    /*background: linear-gradient(#ffffff, #F6F6F6); !* стандартное свойство *!*/
-    /*border-bottom: 1px solid #E0E0E0;*/
-    /*color: #3C3C3C;*/
-    /*font-size: 12px;*/
-    /*font-weight: bold;*/
-    /*line-height: 15px;*/
-    /*padding: 11px 0 12px 20px;*/
-    /*text-transform: uppercase;*/
-/*}*/
-/*#content ul {*/
-    /*list-style:none outside none;*/
-    /*margin:0;*/
-    /*padding:0;*/
-/*}*/
 /*оформляет как раз столбцы*/
 #content #left ul li {
-    float:left;
-    padding-bottom: 21px;
-    width: 33%;
+    /*float:left;*/
+    float: left;
+    margin-right:0px;
+    margin-left:13px;
+    padding-bottom: 2px;
+    /*padding-left: 21px;*/
+    width: 48%;
 }
-/*#content #left ul li:hover {*/
-    /*background-color: #fbfbfb;*/
-/*}*/
-/*#content #right ul li {*/
-    /*border-top: 1px solid #E7E7E7;*/
-    /*overflow: hidden;*/
-/*}*/
-/*#content #right ul li:hover {*/
-    /*background-color: #fbfbfb;*/
-/*}*/
-/*#content #right ul li:first-child {*/
-    /*border-width: none;*/
-/*}*/
-/*#content #left ul li .img {*/
-    /*text-align: center;*/
-/*}*/
-/*#content #right ul li .img {*/
-    /*background-color: #FFFFFF;*/
-    /*float: left;*/
-    /*height: 94px;*/
-    /*text-align: center;*/
-    /*width: 113px;*/
-/*}*/
 
 /*нужно для фиксирования картинок*/
 #content #left ul li .img img {
     height:128px;
     width:128px;
 }
-/*#content #right ul li .img img {*/
-    /*height:70px;*/
-    /*margin-top: 11px;*/
-    /*width:70px;*/
-/*}*/
-#content #left ul li .info {
-    padding: 17px 20px 0 19px;
-}
-/*#content #right ul li .info {*/
-    /*float: left;*/
-    /*overflow: hidden;*/
-    /*padding: 17px 0 0 21px;*/
-    /*width: 164px;*/
-/*}*/
-/*#content ul li .info .title {*/
-    /*color: #4B4B4B;*/
-    /*display: inline-block;*/
-    /*font-size: 11px;*/
-    /*font-weight: bold;*/
-    /*line-height: 16px;*/
-    /*text-decoration: none;*/
-    /*text-transform: uppercase;*/
-    /*width: 150px;*/
-/*}*/
-/*#content ul li .info .title:hover {*/
-    /*color: #049733;*/
-/*}*/
-/*#content #left ul li .info p {*/
-    /*color: #7F7F7F;*/
-    /*font-size: 11px;*/
-    /*line-height: 16px;*/
-    /*padding-top: 3px;*/
-/*}*/
-/*#content #left ul li .info .price {*/
-    /*background: none repeat scroll 0 0 #F7F7F7;*/
-    /*color: #383838;*/
-    /*font-size: 12px;*/
-    /*font-weight: bold;*/
-    /*line-height: 16px;*/
-    /*margin: 17px 0 10px;*/
-    /*padding: 6px 0 6px 8px;*/
-/*}*/
-/*#content #right ul li .info .price {*/
-    /*color: #383838;*/
-    /*font-size: 12px;*/
-    /*font-weight: bold;*/
-    /*line-height: 16px;*/
-    /*padding-top: 25px;*/
-/*}*/
-/*#content #left ul li .info .price .st {*/
-    /*color: #7F7F7F;*/
-    /*font-size: 11px;*/
-    /*line-height: 16px;*/
-    /*margin-right: 3px;*/
-/*}*/
-/*#content #right ul li .info .price .usual, #content #right ul li .info .price .special {*/
-    /*color: #7F7F7F;*/
-    /*font-size: 12px;*/
-    /*font-weight: normal;*/
-    /*line-height: 16px;*/
-    /*padding-right: 6px;*/
-    /*text-decoration: line-through;*/
-/*}*/
-/*#content #right ul li .info .price .special {*/
-    /*color: #FD7A01;*/
-    /*font-weight: bold;*/
-    /*text-decoration: none;*/
-/*}*/
-/*#content #left ul li .info .actions {*/
-    /*overflow:hidden;*/
-/*}*/
-/*#content #left ul li .info .actions a {*/
-    /*border: 1px solid #E0E0E0;*/
-    /*color: #fd7a01;*/
-    /*display: block;*/
-    /*float:right;*/
-    /*font-size: 11px;*/
-    /*font-weight: bold;*/
-    /*line-height: 16px;*/
-    /*padding: 5px;*/
-    /*text-decoration: none;*/
-/*}*/
-/*#content #left ul li .info .actions a:first-child {*/
-    /*color: #009832;*/
-    /*float:left;*/
+
+/*#content #left ul li .info {*/
+    /*padding: 17px 20px 0 19px;*/
 /*}*/
 .container-buttons {
     display: flex;
